CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

enable_testing()

ADD_EXECUTABLE(test_main main.cc)

ADD_TEST(NAME test_add_2_3 COMMAND test_main 2 3)
SET_TESTS_PROPERTIES(test_add_2_3
    PROPERTIES PASS_REGULAR_EXPRESSION "5")
ADD_TEST(NAME test_add_4_5 COMMAND test_main 4 5)
SET_TESTS_PROPERTIES(test_add_4_5
    PROPERTIES PASS_REGULAR_EXPRESSION "9")
ADD_TEST(NAME test_add_5_5 COMMAND test_main 5 5)
SET_TESTS_PROPERTIES(test_add_5_5
    PROPERTIES PASS_REGULAR_EXPRESSION "10")